<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical"
    tools:context="com.arrk.arrktest.view.DetailActivity">

    <!-- Name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/name"
            android:textColor="@color/color_label_text" />

        <TextView
            android:id="@+id/nameval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:textColor="@color/color_value_text" />

    </LinearLayout>

    <!-- height-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/height"
            android:textColor="@color/color_label_text" />

        <TextView
            android:id="@+id/heightval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:textColor="@color/color_value_text" />

    </LinearLayout>

    <!-- Mass/Weight-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/weight_kgs"
            android:textColor="@color/color_label_text" />

        <TextView
            android:id="@+id/weightval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:textColor="@color/color_value_text" />

    </LinearLayout>

    <!-- Date-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/date_text"
            android:textColor="@color/color_label_text" />

        <TextView
            android:id="@+id/dateval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:textColor="@color/color_value_text" />

    </LinearLayout>

    <!-- Time-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/time_text"
            android:textColor="@color/color_label_text" />

        <TextView
            android:id="@+id/timeval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:textColor="@color/color_value_text" />

    </LinearLayout>


</LinearLayout>
